Include statements for functions section (#1004)
Various queries in the Cypher Quick Reference are formatted differently.
I wasn't sure which way is preferable, so i did not change anything, but
it's something to keep in mind during a review

---------

Co-authored-by: Jens Pryce-Åklundh <112686610+JPryce-Aklundh@users.noreply.github.com>

--- a/modules/ROOT/pages/functions/aggregating.adoc
+++ b/modules/ROOT/pages/functions/aggregating.adoc
@@ -63,11 +63,13 @@ CREATE
 ======
 
 .Query
+// tag::functions_aggregating_avg[]
 [source, cypher]
 ----
 MATCH (p:Person)
 RETURN avg(p.age)
 ----
+// end::functions_aggregating_avg[]
 
 The average of all the values in the property `age` is returned:
 
@@ -87,11 +89,13 @@ The average of all the values in the property `age` is returned:
 ======
 
 .Query
+// tag::functions_aggregating_duration_avg[]
 [source, cypher]
 ----
 UNWIND [duration('P2DT3H'), duration('PT1H45S')] AS dur
 RETURN avg(dur)
 ----
+// end::functions_aggregating_duration_avg[]
 
 The average of the two supplied `DURATION` values is returned:
 
@@ -133,11 +137,13 @@ The average of the two supplied `DURATION` values is returned:
 ======
 
 .Query
+// tag::functions_aggregating_collect[]
 [source, cypher]
 ----
 MATCH (p:Person)
 RETURN collect(p.age)
 ----
+// end::functions_aggregating_collect[]
 
 All the values are collected and returned in a single list:
 
@@ -189,11 +195,13 @@ The function `count(*)` can be used to return the number of nodes; for example, 
 ======
 
 .Query
+// tag::functions_aggregating_count[]
 [source, cypher]
 ----
 MATCH (p:Person {name: 'Keanu Reeves'})-->(x)
 RETURN labels(p), p.age, count(*)
 ----
+// end::functions_aggregating_count[]
 
 The labels and `age` property of the start node `Keanu Reeves` and the number of nodes related to it are returned:
 
@@ -248,11 +256,13 @@ Instead of simply returning the number of rows with `count(*)`, the function `co
 ======
 
 .Query
+// tag::functions_aggregating_count_as_expression[]
 [source, cypher]
 ----
 MATCH (p:Person)
 RETURN count(p.age)
 ----
+// end::functions_aggregating_count_as_expression[]
 
 The number of nodes with the label `Person` and a property `age` is returned:
 (To calculate the sum, use `sum(n.age)`)
@@ -389,11 +399,13 @@ The highest of all the lists in the set -- in this case, the list `[1, 2]` -- is
 ======
 
 .Query
+// tag::functions_aggregating_max[]
 [source, cypher]
 ----
 MATCH (p:Person)
 RETURN max(p.age)
 ----
+// end::functions_aggregating_max[]
 
 The highest of all the values in the property `age` is returned:
 
@@ -486,11 +498,13 @@ The lowest of all the values in the set -- in this case, the list `['a', 'c', 23
 ======
 
 .Query
+// tag::functions_aggregating_min[]
 [source, cypher]
 ----
 MATCH (p:Person)
 RETURN min(p.age)
 ----
+// end::functions_aggregating_min[]
 
 The lowest of all the values in the property `age` is returned:
 
@@ -532,11 +546,13 @@ The lowest of all the values in the property `age` is returned:
 ======
 
 .Query
+// tag::functions_aggregating_percentile_cont[]
 [source, cypher]
 ----
 MATCH (p:Person)
 RETURN percentileCont(p.age, 0.4)
 ----
+// end::functions_aggregating_percentile_cont[]
 
 The 40th percentile of the values in the property `age` is returned, calculated with a weighted average:
 
@@ -579,11 +595,13 @@ The 40th percentile of the values in the property `age` is returned, calculated 
 ======
 
 .Query
+// tag::functions_aggregating_percentile_disc[]
 [source, cypher]
 ----
 MATCH (p:Person)
 RETURN percentileDisc(p.age, 0.5)
 ----
+// end::functions_aggregating_percentile_disc[]
 
 The 50th percentile of the values in the property `age` is returned:
 
@@ -625,12 +643,14 @@ The 50th percentile of the values in the property `age` is returned:
 ======
 
 .Query
+// tag::functions_aggregating_stdev[]
 [source, cypher]
 ----
 MATCH (p:Person)
 WHERE p.name IN ['Keanu Reeves', 'Liam Neeson', 'Carrie Anne Moss']
 RETURN stDev(p.age)
 ----
+// end::functions_aggregating_stdev[]
 
 The standard deviation of the values in the property `age` is returned:
 
@@ -672,12 +692,14 @@ The standard deviation of the values in the property `age` is returned:
 ======
 
 .Query
+// tag::functions_aggregating_stdevp[]
 [source, cypher]
 ----
 MATCH (p:Person)
 WHERE p.name IN ['Keanu Reeves', 'Liam Neeson', 'Carrie Anne Moss']
 RETURN stDevP(p.age)
 ----
+// end::functions_aggregating_stdevp[]
 
 The population standard deviation of the values in the property `age` is returned:
 
@@ -719,11 +741,13 @@ The population standard deviation of the values in the property `age` is returne
 ======
 
 .Query
+// tag::functions_aggregating_sum[]
 [source, cypher]
 ----
 MATCH (p:Person)
 RETURN sum(p.age)
 ----
+// end::functions_aggregating_sum[]
 
 The sum of all the values in the property `age` is returned:
 
@@ -744,11 +768,13 @@ The sum of all the values in the property `age` is returned:
 ======
 
 .Query
+// tag::functions_aggregating_sum_duration[]
 [source, cypher]
 ----
 UNWIND [duration('P2DT3H'), duration('PT1H45S')] AS dur
 RETURN sum(dur)
 ----
+// end::functions_aggregating_sum_duration[]
 
 The sum of the two supplied durations is returned:
 
