--- a/modules/ROOT/pages/functions/database.adoc
+++ b/modules/ROOT/pages/functions/database.adoc
@@ -26,11 +26,13 @@
 ======
 
 .Query
+// tag::functions_database_name_from_element_id[]
 [source, cypher, indent=0]
 ----
 WITH "2:efc7577d-022a-107c-a736-dbcdfc189c03:0" AS eid
 RETURN db.nameFromElementId(eid) AS name
 ----
+// end::functions_database_name_from_element_id[]
 
 Returns the name of the database which the element id belongs to.
 
