--- a/modules/ROOT/pages/functions/graph.adoc
+++ b/modules/ROOT/pages/functions/graph.adoc
@@ -34,10 +34,12 @@ CREATE ALIAS composite.third FOR DATABASE dbc;
 ----
 
 .Query
+// tag::functions_graph_names[]
 [source, cypher, indent=0]
 ----
 RETURN graph.names() AS name
 ----
+// end::functions_graph_names[]
 
 The names of all graphs on the current composite database are returned.
 
@@ -91,11 +93,13 @@ CREATE ALIAS composite.third FOR DATABASE dbc
 ----
 
 .Query
+// tag::functions_graph_properties_by_name[]
 [source, cypher, indent=0]
 ----
 UNWIND graph.names() AS name
 RETURN name, graph.propertiesByName(name) AS props
 ----
+// end::functions_graph_properties_by_name[]
 
 Properties for all graphs on the current composite database are returned.
 
@@ -150,7 +154,8 @@ For more information, see xref:subqueries/call-subquery.adoc#import-variables[CA
 ======
 
 .Query
-[source, cypher, indent=0]
+// tag::functions_graph_by_name[]
+[source, cypher, role=noplay]
 ----
 UNWIND graph.names() AS graphName
 CALL () {
@@ -160,6 +165,7 @@ CALL () {
 }
 RETURN n
 ----
+// end::functions_graph_by_name[]
 
 Returns all nodes from all graphs on the current composite database.
 
@@ -194,10 +200,12 @@ For more information, see xref:subqueries/call-subquery.adoc#import-variables[CA
 In this example, it is assumed that the DBMS contains a composite database constituent, which contains the element id `4:c0a65d96-4993-4b0c-b036-e7ebd9174905:0`.
 
 .Query
+// tag::functions_graph_by_element_id[]
 [source, cypher, role=test-skip]
 ----
 USE graph.byElementId("4:c0a65d96-4993-4b0c-b036-e7ebd9174905:0")
 MATCH (n) RETURN n
 ----
+// end::functions_graph_by_element_id[]
 
 ======
