--- a/modules/ROOT/pages/functions/list.adoc
+++ b/modules/ROOT/pages/functions/list.adoc
@@ -56,11 +56,13 @@ CREATE
 ======
 
 .Query
+// tag::functions_list_keys[]
 [source, cypher]
 ----
 MATCH (a) WHERE a.name = 'Alice'
 RETURN keys(a)
 ----
+// end::functions_list_keys[]
 
 A `LIST<STRING>` containing the names of all the properties on the node bound to `a` is returned.
 
@@ -103,11 +105,13 @@ A `LIST<STRING>` containing the names of all the properties on the node bound to
 ======
 
 .Query
+// tag::functions_list_labels[]
 [source, cypher]
 ----
 MATCH (a) WHERE a.name = 'Alice'
 RETURN labels(a)
 ----
+// end::functions_list_labels[]
 
 A `LIST<STRING>` containing all the labels of the node bound to `a` is returned.
 
@@ -148,12 +152,14 @@ A `LIST<STRING>` containing all the labels of the node bound to `a` is returned.
 ======
 
 .Query
+// tag::functions_list_nodes[]
 [source, cypher]
 ----
 MATCH p = (a)-->(b)-->(c)
 WHERE a.name = 'Alice' AND c.name = 'Eskil'
 RETURN nodes(p)
 ----
+// end::functions_list_nodes[]
 
 A `LIST<NODE>` containing all the nodes in the path `p` is returned.
 
@@ -197,10 +203,12 @@ The only exception where the range does not contain `start` are empty ranges.
 ======
 
 .Query
+// tag::functions_list_range[]
 [source, cypher]
 ----
 RETURN range(0, 10), range(2, 18, 3), range(0, 5, -1)
 ----
+// end::functions_list_range[]
 
 Three lists of numbers in the given ranges are returned.
 
@@ -237,12 +245,14 @@ This function is analogous to the `fold` or `reduce` method in functional langua
 ======
 
 .Query
+// tag::functions_list_reduce[]
 [source, cypher]
 ----
 MATCH p = (a)-->(b)-->(c)
 WHERE a.name = 'Alice' AND b.name = 'Bob' AND c.name = 'Daniel'
 RETURN reduce(totalAge = 0, n IN nodes(p) | totalAge + n.age) AS reduction
 ----
+// end::functions_list_reduce[]
 
 The `age` property of all `NODE` values in the `PATH` are summed and returned as a single value.
 
@@ -283,12 +293,14 @@ The `age` property of all `NODE` values in the `PATH` are summed and returned as
 ======
 
 .Query
+// tag::functions_list_relationships[]
 [source, cypher]
 ----
 MATCH p = (a)-->(b)-->(c)
 WHERE a.name = 'Alice' AND c.name = 'Eskil'
 RETURN relationships(p)
 ----
+// end::functions_list_relationships[]
 
 A `LIST<RELATIONSHIP>` containing all the `RELATIONSHIP` values in the `PATH` `p` is returned.
 
@@ -330,11 +342,13 @@ A `LIST<RELATIONSHIP>` containing all the `RELATIONSHIP` values in the `PATH` `p
 ======
 
 .Query
+// tag::functions_list_reverse[]
 [source, cypher]
 ----
 WITH [4923,'abc',521, null, 487] AS ids
 RETURN reverse(ids)
 ----
+// end::functions_list_reverse[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -365,11 +379,13 @@ RETURN reverse(ids)
 ======
 
 .Query
+// tag::functions_list_tail[]
 [source, cypher]
 ----
 MATCH (a) WHERE a.name = 'Eskil'
 RETURN a.likedColors, tail(a.likedColors)
 ----
+// end::functions_list_tail[]
 
 The property named `likedColors` and a `LIST<ANY>` comprising all but the first element of the `likedColors` property are returned.
 
@@ -414,12 +430,14 @@ The property named `likedColors` and a `LIST<ANY>` comprising all but the first 
 ======
 
 .Query
+// tag::functions_list_to_boolean_list[]
 [source, cypher, indent=0]
 ----
 RETURN toBooleanList(null) as noList,
 toBooleanList([null, null]) as nullsInList,
 toBooleanList(['a string', true, 'false', null, ['A','B']]) as mixedList
 ----
+// end::functions_list_to_boolean_list[]
 
 .Result
 [role="queryresult",options="header,footer",cols="3*<m"]
@@ -462,12 +480,14 @@ toBooleanList(['a string', true, 'false', null, ['A','B']]) as mixedList
 ======
 
 .Query
+// tag::functions_list_to_float_list[]
 [source, cypher]
 ----
 RETURN toFloatList(null) as noList,
 toFloatList([null, null]) as nullsInList,
 toFloatList(['a string', 2.5, '3.14159', null, ['A','B']]) as mixedList
 ----
+// end::functions_list_to_float_list[]
 
 .Result
 [role="queryresult",options="header,footer",cols="3*<m"]
@@ -510,12 +530,14 @@ toFloatList(['a string', 2.5, '3.14159', null, ['A','B']]) as mixedList
 ======
 
 .Query
+// tag::functions_list_to_integer_list[]
 [source, cypher]
 ----
 RETURN toIntegerList(null) as noList,
 toIntegerList([null, null]) as nullsInList,
 toIntegerList(['a string', 2, '5', null, ['A','B']]) as mixedList
 ----
+// end::functions_list_to_integer_list[]
 
 .Result
 [role="queryresult",options="header,footer",cols="3*<m"]
@@ -558,12 +580,14 @@ toIntegerList(['a string', 2, '5', null, ['A','B']]) as mixedList
 ======
 
 .Query
+// tag::functions_list_to_string_list[]
 [source, cypher]
 ----
 RETURN toStringList(null) as noList,
 toStringList([null, null]) as nullsInList,
 toStringList(['already a string', 2, date({year:1955, month:11, day:5}), null, ['A','B']]) as mixedList
 ----
+// end::functions_list_to_string_list[]
 
 .Result
 [role="queryresult",options="header,footer",cols="3*<m"]
