--- a/modules/ROOT/pages/functions/mathematical-logarithmic.adoc
+++ b/modules/ROOT/pages/functions/mathematical-logarithmic.adoc
@@ -21,10 +21,12 @@ Logarithmic mathematical functions operate on numeric expressions only, and will
 ======
 
 .Query
+// tag::functions_mathematical_logarithmic_e[]
 [source, cypher, indent=0]
 ----
 RETURN e()
 ----
+// end::functions_mathematical_logarithmic_e[]
 
 The base of the natural logarithm, `e`, is returned.
 
@@ -66,10 +68,12 @@ The base of the natural logarithm, `e`, is returned.
 ======
 
 .Query
+// tag::functions_mathematical_logarithmic_exp[]
 [source, cypher, indent=0]
 ----
 RETURN exp(2)
 ----
+// end::functions_mathematical_logarithmic_exp[]
 
 `e` to the power of `2` is returned.
 
@@ -112,10 +116,12 @@ RETURN exp(2)
 ======
 
 .Query
+// tag::functions_mathematical_logarithmic_log[]
 [source, cypher, indent=0]
 ----
 RETURN log(27)
 ----
+// end::functions_mathematical_logarithmic_log[]
 
 The natural logarithm of `27` is returned.
 
@@ -158,10 +164,12 @@ The natural logarithm of `27` is returned.
 ======
 
 .Query
+// tag::functions_mathematical_logarithmic_log10[]
 [source, cypher, indent=0]
 ----
 RETURN log10(27)
 ----
+// end::functions_mathematical_logarithmic_log10[]
 
 The common logarithm of `27` is returned.
 
@@ -203,10 +211,12 @@ The common logarithm of `27` is returned.
 ======
 
 .Query
+// tag::functions_mathematical_logarithmic_sqrt[]
 [source, cypher, indent=0]
 ----
 RETURN sqrt(256)
 ----
+// end::functions_mathematical_logarithmic_sqrt[]
 
 The square root of `256` is returned.
 
