--- a/modules/ROOT/pages/functions/mathematical-numeric.adoc
+++ b/modules/ROOT/pages/functions/mathematical-numeric.adoc
@@ -55,11 +55,13 @@ CREATE
 ======
 
 .Query
+// tag::functions_mathematical_numeric_abs[]
 [source, cypher, indent=0]
 ----
 MATCH (a), (e) WHERE a.name = 'Alice' AND e.name = 'Eskil'
 RETURN a.age, e.age, abs(a.age - e.age)
 ----
+// end::functions_mathematical_numeric_abs[]
 
 The absolute value of the age difference is returned.
 
@@ -100,10 +102,12 @@ The absolute value of the age difference is returned.
 ======
 
 .Query
+// tag::functions_mathematical_numeric_ceil[]
 [source, cypher, indent=0]
 ----
 RETURN ceil(0.1)
 ----
+// end::functions_mathematical_numeric_ceil[]
 
 The ceil of `0.1` is returned.
 
@@ -144,10 +148,12 @@ The ceil of `0.1` is returned.
 ======
 
 .Query
+// tag::functions_mathematical_numeric_floor[]
 [source, cypher, indent=0]
 ----
 RETURN floor(0.9)
 ----
+// end::functions_mathematical_numeric_floor[]
 
 The floor of `0.9` is returned.
 
@@ -186,10 +192,12 @@ The floor of `0.9` is returned.
 ======
 
 .Query
+// tag::functions_mathematical_numeric_is_nan[]
 [source, cypher]
 ----
 RETURN isNaN(0/0.0)
 ----
+// end::functions_mathematical_numeric_is_nan[]
 
 `true` is returned since the value is `NaN`.
 
@@ -220,10 +228,12 @@ RETURN isNaN(0/0.0)
 ======
 
 .Query
+// tag::functions_mathematical_numeric_rand[]
 [source, cypher, indent=0]
 ----
 RETURN rand()
 ----
+// end::functions_mathematical_numeric_rand[]
 
 A random number is returned.
 
@@ -296,10 +306,12 @@ E.g. for precision 1, 2.15 is a tie as it has equal distance to 2.1 and 2.2, whi
 ======
 
 .Query
+// tag::functions_mathematical_numeric_round[]
 [source, cypher, indent=0]
 ----
 RETURN round(3.141592)
 ----
+// end::functions_mathematical_numeric_round[]
 
 `3.0` is returned.
 
@@ -341,10 +353,12 @@ Ties are rounded towards positive infinity, therefore `-1.0` is returned.
 ======
 
 .Query
+// tag::functions_mathematical_numeric_round_with_precision[]
 [source, cypher, indent=0]
 ----
 RETURN round(3.141592, 3)
 ----
+// end::functions_mathematical_numeric_round_with_precision[]
 
 `3.142` is returned.
 
@@ -413,6 +427,7 @@ The default is to round away from zero when there is a tie, therefore `-1.6` is 
 ======
 
 .Query
+// tag::functions_mathematical_numeric_round_with_precision_and_rounding_mode[]
 [source, cypher, indent=0]
 ----
 RETURN round(1.249, 1, 'UP') AS positive,
@@ -420,6 +435,7 @@ round(-1.251, 1, 'UP') AS negative,
 round(1.25, 1, 'UP') AS positiveTie,
 round(-1.35, 1, 'UP') AS negativeTie
 ----
+// end::functions_mathematical_numeric_round_with_precision_and_rounding_mode[]
 
 The rounded values using precision 1 and rounding mode `UP` are returned.
 
@@ -614,10 +630,12 @@ The rounded values using precision 1 and rounding mode `HALF_EVEN` are returned.
 ======
 
 .Query
+// tag::functions_mathematical_numeric_sign[]
 [source, cypher, indent=0]
 ----
 RETURN sign(-17), sign(0.1)
 ----
+// end::functions_mathematical_numeric_sign[]
 
 The signs of `-17` and `0.1` are returned.
 
