--- a/modules/ROOT/pages/functions/predicate.adoc
+++ b/modules/ROOT/pages/functions/predicate.adoc
@@ -60,6 +60,7 @@ CREATE
 ======
 
 .Query
+// tag::functions_predicate_all[]
 [source, cypher, indent=0]
 ----
 MATCH p = (a)-[*]->(b)
@@ -69,6 +70,7 @@ WHERE
   AND all(x IN nodes(p) WHERE x.age < 60)
 RETURN p
 ----
+// end::functions_predicate_all[]
 
 All nodes in the returned paths will have a property `age` with a value lower than `60`:
 
@@ -110,12 +112,14 @@ image::predicate_function_example.svg[width="300",role="middle"]
 ======
 
 .Query
+// tag::functions_predicate_any[]
 [source, cypher, indent=0]
 ----
 MATCH (p:Person)
 WHERE any(nationality IN p.nationality WHERE nationality = 'American')
 RETURN p
 ----
+// end::functions_predicate_any[]
 
 The query returns the `Person` nodes with the `nationality` property value `American`:
 
@@ -160,6 +164,7 @@ To check if a property is not `null` use the xref::syntax/operators.adoc#cypher-
 ======
 
 .Query
+// tag::functions_predicate_exists[]
 [source, cypher, indent=0]
 ----
 MATCH (p:Person)
@@ -167,6 +172,7 @@ RETURN
   p.name AS name,
   exists((p)-[:ACTED_IN]->()) AS has_acted_in_rel
 ----
+// end::functions_predicate_exists[]
 
 This query returns the `name` property of every `Person` node, along with a boolean (`true` or `false`) indicating if those nodes have an `ACTED_IN` relationship in the graph.
 
@@ -209,12 +215,14 @@ For information about the `EXISTS` subquery, which is more versatile than the `e
 ======
 
 .Query
+// tag::functions_predicate_is_empty[]
 [source, cypher]
 ----
 MATCH (p:Person)
 WHERE NOT isEmpty(p.nationality)
 RETURN p.name, p.nationality
 ----
+// end::functions_predicate_is_empty[]
 
 This query returns every `Person` node in the graph with a set `nationality` property value (i.e., all `Person` nodes except for `Jessica Chastain`):
 
@@ -310,6 +318,7 @@ xref:syntax/operators.adoc#cypher-comparison[`IS NULL` or `IS NOT NULL`] should 
 ======
 
 .Query
+// tag::functions_predicate_none[]
 [source, cypher, indent=0]
 ----
 MATCH p = (n)-[*]->(b)
@@ -318,6 +327,7 @@ WHERE
   AND none(x IN nodes(p) WHERE x.age > 60)
 RETURN p
 ----
+// end::functions_predicate_none[]
 
 No node in the returned path has an `age` property with a greater value than `60`:
 
@@ -361,6 +371,7 @@ image::predicate_function_example.svg[width="300",role="middle"]
 ======
 
 .Query
+// tag::functions_predicate_single[]
 [source, cypher, indent=0]
 ----
 MATCH p = (n)-->(b)
@@ -369,6 +380,7 @@ WHERE
   AND single(x IN nodes(p) WHERE x.nationality = 'Northern Irish')
 RETURN p
 ----
+// end::functions_predicate_single[]
 
 In every returned path there is exactly one node which has the `nationality` property value `Northern Irish`:
 
