--- a/modules/ROOT/pages/functions/scalar.adoc
+++ b/modules/ROOT/pages/functions/scalar.adoc
@@ -57,10 +57,12 @@ This function is an alias of the xref::functions/scalar.adoc#functions-size[`siz
 ======
 
 .Query
+// tag::functions_scalar_char_length[]
 [source, cypher, indent=0]
 ----
 RETURN char_length('Alice')
 ----
+// end::functions_scalar_char_length[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -103,10 +105,12 @@ This function is an alias of the xref::functions/scalar.adoc#functions-size[`siz
 ======
 
 .Query
+// tag::functions_scalar_character_length[]
 [source, cypher, indent=0]
 ----
 RETURN character_length('Alice')
 ----
+// end::functions_scalar_character_length[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -146,12 +150,14 @@ The number of Unicode characters in the `STRING` is returned.
 ======
 
 .Query
+// tag::functions_scalar_coalesce[]
 [source, cypher, indent=0]
 ----
 MATCH (a)
 WHERE a.name = 'Alice'
 RETURN coalesce(a.hairColor, a.eyes)
 ----
+// end::functions_scalar_coalesce[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -203,11 +209,13 @@ It is therefore recommended to use application-generated IDs.
 ======
 
 .Query
+// tag::functions_scalar_element_id[]
 [source, cypher]
 ----
 MATCH (n:Developer)
 RETURN elementId(n)
 ----
+// end::functions_scalar_element_id[]
 
 The identifier for each `Developer` node is returned.
 
@@ -268,11 +276,13 @@ The identifier for each relationship connected to a `Developer` node is returned
 ======
 
 .Query
+// tag::functions_scalar_end_node[]
 [source, cypher, indent=0]
 ----
 MATCH (x:Developer)-[r]-()
 RETURN endNode(r)
 ----
+// end::functions_scalar_end_node[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -312,12 +322,14 @@ RETURN endNode(r)
 ======
 
 .Query
+// tag::functions_scalar_head[]
 [source, cypher, indent=0]
 ----
 MATCH (a)
 WHERE a.name = 'Eskil'
 RETURN a.likedColors, head(a.likedColors)
 ----
+// end::functions_scalar_head[]
 
 The first element in the list is returned.
 
@@ -386,11 +398,13 @@ The extended ID is likely different from the local ID for the same node or relat
 ======
 
 .Query
+// tag::functions_scalar_id[]
 [source, cypher, indent=0]
 ----
 MATCH (a)
 RETURN id(a)
 ----
+// end::functions_scalar_id[]
 
 The node identifier for each of the nodes is returned.
 
@@ -438,12 +452,14 @@ The node identifier for each of the nodes is returned.
 ======
 
 .Query
+// tag::functions_scalar_last[]
 [source, cypher, indent=0]
 ----
 MATCH (a)
 WHERE a.name = 'Eskil'
 RETURN a.likedColors, last(a.likedColors)
 ----
+// end::functions_scalar_last[]
 
 The last element in the list is returned.
 
@@ -486,12 +502,14 @@ To calculate the length of a `LIST` of the number of Unicode characters in a `ST
 ======
 
 .Query
+// tag::functions_scalar_length[]
 [source, cypher, indent=0]
 ----
 MATCH p = (a)-->(b)-->(c)
 WHERE a.name = 'Alice'
 RETURN length(p)
 ----
+// end::functions_scalar_length[]
 
 The length of the path `p` is returned.
 
@@ -553,10 +571,12 @@ The null value is returned as the two parameters are equivalent.
 ======
 
 .Query
+// tag::functions_scalar_null_if[]
 [source, cypher, indent=0]
 ----
 RETURN nullIf("abc", "def")
 ----
+// end::functions_scalar_null_if[]
 
 The first parameter, "abc", is returned, as the two parameters are not equivalent.
 
@@ -627,11 +647,13 @@ RETURN a.name AS name, coalesce(nullIf(a.eyes, "Brown"), "Hazel") AS eyeColor
 ======
 
 .Query
+// tag::functions_scalar_properties[]
 [source, cypher, indent=0]
 ----
 CREATE (p:Person {name: 'Stefan', city: 'Berlin'})
 RETURN properties(p)
 ----
+// end::functions_scalar_properties[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -661,10 +683,12 @@ A Universally Unique Identified (UUID), also known as a Globally Unique Identifi
 ======
 
 .Query
+// tag::functions_scalar_random_uuid[]
 [source, cypher, indent=0]
 ----
 RETURN randomUUID() AS uuid
 ----
+// end::functions_scalar_random_uuid[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -705,10 +729,12 @@ To calculate the length of a `PATH`, see xref:functions/scalar.adoc#functions-le
 ======
 
 .Query
+// tag::functions_scalar_size[]
 [source, cypher, indent=0]
 ----
 RETURN size(['Alice', 'Bob'])
 ----
+// end::functions_scalar_size[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -801,11 +827,13 @@ The number of characters in the `STRING` `'Charlie'` is returned.
 ======
 
 .Query
+// tag::functions_scalar_start_node[]
 [source, cypher, indent=0]
 ----
 MATCH (x:Developer)-[r]-()
 RETURN startNode(r)
 ----
+// end::functions_scalar_start_node[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -848,10 +876,12 @@ It is the equivalent of `datetime().epochMillis`.
 ======
 
 .Query
+// tag::functions_scalar_timestamp[]
 [source, cypher, indent=0]
 ----
 RETURN timestamp()
 ----
+// end::functions_scalar_timestamp[]
 
 The time in milliseconds is returned.
 
@@ -895,10 +925,12 @@ The time in milliseconds is returned.
 ======
 
 .Query
+// tag::functions_scalar_to_boolean[]
 [source, cypher, indent=0]
 ----
 RETURN toBoolean('true'), toBoolean('not a boolean'), toBoolean(0)
 ----
+// end::functions_scalar_to_boolean[]
 
 .Result
 [role="queryresult",options="header,footer",cols="3*<m"]
@@ -940,10 +972,12 @@ RETURN toBoolean('true'), toBoolean('not a boolean'), toBoolean(0)
 ======
 
 .Query
+// tag::functions_scalar_to_boolean_or_null[]
 [source, cypher, indent=0]
 ----
 RETURN toBooleanOrNull('true'), toBooleanOrNull('not a boolean'), toBooleanOrNull(0), toBooleanOrNull(1.5)
 ----
+// end::functions_scalar_to_boolean_or_null[]
 
 .Result
 [role="queryresult",options="header,footer",cols="4*<m"]
@@ -983,10 +1017,12 @@ RETURN toBooleanOrNull('true'), toBooleanOrNull('not a boolean'), toBooleanOrNul
 ======
 
 .Query
+// tag::functions_scalar_to_float[]
 [source, cypher, indent=0]
 ----
 RETURN toFloat('11.5'), toFloat('not a number')
 ----
+// end::functions_scalar_to_float[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -1025,10 +1061,12 @@ RETURN toFloat('11.5'), toFloat('not a number')
 ======
 
 .Query
+// tag::functions_scalar_to_float_or_null[]
 [source, cypher, indent=0]
 ----
 RETURN toFloatOrNull('11.5'), toFloatOrNull('not a number'), toFloatOrNull(true)
 ----
+// end::functions_scalar_to_float_or_null[]
 
 .Result
 [role="queryresult",options="header,footer",cols="3*<m"]
@@ -1072,10 +1110,12 @@ RETURN toFloatOrNull('11.5'), toFloatOrNull('not a number'), toFloatOrNull(true)
 ======
 
 .Query
+// tag::functions_scalar_to_integer[]
 [source, cypher, indent=0]
 ----
 RETURN toInteger('42'), toInteger('not a number'), toInteger(true)
 ----
+// end::functions_scalar_to_integer[]
 
 .Result
 [role="queryresult",options="header,footer",cols="3*<m"]
@@ -1119,10 +1159,12 @@ RETURN toInteger('42'), toInteger('not a number'), toInteger(true)
 ======
 
 .Query
+// tag::functions_scalar_to_integer_or_null[]
 [source, cypher, indent=0]
 ----
 RETURN toIntegerOrNull('42'), toIntegerOrNull('not a number'), toIntegerOrNull(true), toIntegerOrNull(['A', 'B', 'C'])
 ----
+// end::functions_scalar_to_integer_or_null[]
 
 .Result
 [role="queryresult",options="header,footer",cols="4*<m"]
@@ -1162,12 +1204,14 @@ RETURN toIntegerOrNull('42'), toIntegerOrNull('not a number'), toIntegerOrNull(t
 ======
 
 .Query
+// tag::functions_scalar_type[]
 [source, cypher, indent=0]
 ----
 MATCH (n)-[r]->()
 WHERE n.name = 'Alice'
 RETURN type(r)
 ----
+// end::functions_scalar_type[]
 
 The relationship type of `r` is returned.
 
@@ -1245,11 +1289,13 @@ See the xref::values-and-types/type-predicate.adoc[type predicate expression] fo
 ======
 
 .Query
+// tag::functions_scalar_value_type[]
 [source, cypher, indent=0]
 ----
 UNWIND ["abc", 1, 2.0, true, [date()]] AS value
 RETURN valueType(value) AS result
 ----
+// end::functions_scalar_value_type[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
