--- a/modules/ROOT/pages/functions/spatial.adoc
+++ b/modules/ROOT/pages/functions/spatial.adoc
@@ -128,11 +128,13 @@ RETURN point({x: 2.3, y: 4.5, crs: 'WGS-84'}) AS point
 ======
 
 .Query
+// tag::functions_spatial_point_distance[]
 [source, cypher]
 ----
 MATCH (p:Office)
 RETURN point({longitude: p.longitude, latitude: p.latitude}) AS officePoint
 ----
+// end::functions_spatial_point_distance[]
 
 A 2D `POINT` representing the coordinates of the city of Malmo in the _WGS 84_ CRS is returned.
 
@@ -177,10 +179,12 @@ A 3D `POINT` with a `longitude` of `56.7`, a `latitude` of `12.78` and a height 
 ======
 
 .Query
+// tag::functions_spatial_point_within_bbox[]
 [source, cypher]
 ----
 RETURN point({x: 2.3, y: 4.5}) AS point
 ----
+// end::functions_spatial_point_within_bbox[]
 
 A 2D `POINT` with an `x` coordinate of `2.3` and a `y` coordinate of `4.5` in the _Cartesian_ CRS is returned.
 
@@ -337,6 +341,7 @@ The distance between two 3D points in the _WGS 84_ CRS is returned.
 ======
 
 .Query
+// tag::functions_spatial_point_wgs_84_2d[]
 [source, cypher]
 ----
 MATCH (t:TrainStation)-[:TRAVEL_ROUTE]->(o:Office)
@@ -345,6 +350,7 @@ WITH
   point({longitude: o.longitude, latitude: o.latitude}) AS officePoint
 RETURN round(point.distance(trainPoint, officePoint)) AS travelDistance
 ----
+// end::functions_spatial_point_wgs_84_2d[]
 
 The distance between the train station in Copenhagen and the Neo4j office in Malmo is returned.
 
@@ -415,6 +421,7 @@ If `null` is provided as one or both of the arguments, `null` is returned.
 ======
 
 .Query
+// tag::functions_spatial_point_wgs_84_3d[]
 [source, cypher]
 ----
 WITH
@@ -422,6 +429,7 @@ WITH
   point({x: 10, y: 10, crs: 'cartesian'}) AS upperRight
 RETURN point.withinBBox(point({x: 5, y: 5, crs: 'cartesian'}), lowerLeft, upperRight) AS result
 ----
+// end::functions_spatial_point_wgs_84_3d[]
 
 Checking if a point in _Cartesian_ CRS is contained in the bounding box.
 
@@ -442,6 +450,7 @@ Checking if a point in _Cartesian_ CRS is contained in the bounding box.
 ======
 
 .Query
+// tag::functions_spatial_point_cartesian_2d[]
 [source, cypher]
 ----
 WITH
@@ -451,6 +460,7 @@ MATCH (t:TrainStation)
 WHERE point.withinBBox(point({longitude: t.longitude, latitude: t.latitude}), lowerLeft, upperRight)
 RETURN count(t)
 ----
+// end::functions_spatial_point_cartesian_2d[]
 
 Finds all train stations contained in a bounding box around Copenhagen.
 
@@ -498,6 +508,7 @@ A bounding box that crosses the 180th meridian.
 ======
 
 .Query
+// tag::functions_spatial_point_cartesian_3d[]
 [source, cypher]
 ----
 RETURN
@@ -507,6 +518,7 @@ RETURN
     point({longitude: 57.0, latitude: 13.0})
   ) AS in
 ----
+// end::functions_spatial_point_cartesian_3d[]
 
 If `null` is provided as any of the arguments, `null` is returned.
 
