--- a/modules/ROOT/pages/functions/string.adoc
+++ b/modules/ROOT/pages/functions/string.adoc
@@ -48,10 +48,12 @@ See also xref::syntax/operators.adoc#query-operators-string[String operators].
 ======
 
 .Query
+// tag::functions_string_btrim[]
 [source, cypher, indent=0]
 ----
 RETURN btrim('   hello    '), btrim('xxyyhelloxyxy', 'xy')
 ----
+// end::functions_string_btrim[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -94,10 +96,12 @@ RETURN btrim('   hello    '), btrim('xxyyhelloxyxy', 'xy')
 ======
 
 .Query
+// tag::functions_string_left[]
 [source, cypher, indent=0]
 ----
 RETURN left('hello', 3)
 ----
+// end::functions_string_left[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -138,10 +142,12 @@ This function is an alias to the xref:functions/string.adoc#functions-tolower[`t
 ======
 
 .Query
+// tag::functions_string_lower[]
 [source, cypher, indent=0]
 ----
 RETURN lower('HELLO')
 ----
+// end::functions_string_lower[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -184,10 +190,12 @@ If this is not specified all leading whitespace will be removed.
 ======
 
 .Query
+// tag::functions_string_ltrim[]
 [source, cypher, indent=0]
 ----
 RETURN ltrim('   hello'), ltrim('xxyyhelloxyxy', 'xy')
 ----
+// end::functions_string_ltrim[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -243,10 +251,12 @@ normalize the codepoint `\uFE64` to `\u003C`, creating a single codepoint repres
 ======
 
 .Query
+// tag::functions_string_normalize[]
 [source, cypher, indent=0]
 ----
 RETURN normalize('\u212B') = '\u00C5' AS result
 ----
+// end::functions_string_normalize[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -336,10 +346,12 @@ RETURN normalize('\uFE64', NFKC) = '\u003C' AS result
 ======
 
 .Query
+// tag::functions_string_replace[]
 [source, cypher, indent=0]
 ----
 RETURN replace("hello", "l", "w")
 ----
+// end::functions_string_replace[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -379,17 +391,20 @@ RETURN replace("hello", "l", "w")
 ======
 
 .Query
+// tag::functions_string_reverse[]
 [source, cypher, indent=0]
 ----
-RETURN reverse('anagram')
+RETURN reverse('palindrome')
 ----
+// end::functions_string_reverse[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
 |===
 
-| reverse('anagram')
-| "margana"
+| reverse('palindrome')
+| "emordnilap"
+
 1+d|Rows: 1
 
 |===
@@ -427,10 +442,12 @@ RETURN reverse('anagram')
 ======
 
 .Query
+// tag::functions_string_right[]
 [source, cypher, indent=0]
 ----
 RETURN right('hello', 3)
 ----
+// end::functions_string_right[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -476,10 +493,12 @@ If this is not specified all trailing whitespace will be removed.
 ======
 
 .Query
+// tag::functions_string_rtrim[]
 [source, cypher, indent=0]
 ----
 RETURN rtrim('hello   '), rtrim('xxyyhelloxyxy', 'xy')
 ----
+// end::functions_string_rtrim[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -520,10 +539,12 @@ RETURN rtrim('hello   '), rtrim('xxyyhelloxyxy', 'xy')
 ======
 
 .Query
+// tag::functions_string_split[]
 [source, cypher, indent=0]
 ----
 RETURN split('one,two', ',')
 ----
+// end::functions_string_split[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -569,10 +590,12 @@ RETURN split('one,two', ',')
 ======
 
 .Query
+// tag::functions_string_substring[]
 [source, cypher, indent=0]
 ----
 RETURN substring('hello', 1, 3), substring('hello', 2)
 ----
+// end::functions_string_substring[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -611,10 +634,12 @@ RETURN substring('hello', 1, 3), substring('hello', 2)
 ======
 
 .Query
+// tag::functions_string_to_lower[]
 [source, cypher, indent=0]
 ----
 RETURN toLower('HELLO')
 ----
+// end::functions_string_to_lower[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -653,6 +678,7 @@ RETURN toLower('HELLO')
 ======
 
 .Query
+// tag::functions_string_to_string[]
 [source, cypher, indent=0]
 ----
 RETURN
@@ -663,6 +689,7 @@ RETURN
   toString(datetime({year: 1984, month: 10, day: 11, hour: 12, minute: 31, second: 14, millisecond: 341, timezone: 'Europe/Stockholm'})) AS datetimeString,
   toString(duration({minutes: 12, seconds: -60})) AS durationString
 ----
+// end::functions_string_to_string[]
 
 .Result
 [role="queryresult",options="header,footer",cols="6*<m"]
@@ -700,6 +727,7 @@ RETURN
 ======
 
 .Query
+// tag::functions_string_to_string_or_null[]
 [source, cypher, indent=0]
 ----
 RETURN toStringOrNull(11.5),
@@ -710,6 +738,7 @@ toStringOrNull(datetime({year: 1984, month: 10, day: 11, hour: 12, minute: 31, s
 toStringOrNull(duration({minutes: 12, seconds: -60})) AS durationString,
 toStringOrNull(['A', 'B', 'C']) AS list
 ----
+// end::functions_string_to_string_or_null[]
 
 .Result
 [role="queryresult",options="header,footer",cols="7*<m"]
@@ -748,10 +777,12 @@ toStringOrNull(['A', 'B', 'C']) AS list
 ======
 
 .Query
+// tag::functions_string_to_upper[]
 [source, cypher, indent=0]
 ----
 RETURN toUpper('hello')
 ----
+// end::functions_string_to_upper[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -797,10 +828,12 @@ If these are not specified all leading and/or trailing whitespace will be remove
 ======
 
 .Query
+// tag::functions_string_trim[]
 [source, cypher, indent=0]
 ----
 RETURN trim('   hello   '), trim(BOTH 'x' FROM 'xxxhelloxxx')
 ----
+// end::functions_string_trim[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -842,10 +875,12 @@ This function is an alias to the xref:functions/string.adoc#functions-toupper[`t
 ======
 
 .Query
+// tag::functions_string_upper[]
 [source, cypher, indent=0]
 ----
 RETURN upper('hello')
 ----
+// end::functions_string_upper[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
