--- a/modules/ROOT/pages/functions/temporal/duration.adoc
+++ b/modules/ROOT/pages/functions/temporal/duration.adoc
@@ -40,6 +40,7 @@ See also xref::values-and-types/temporal.adoc[Temporal values] and xref::syntax/
 ======
 
 .Query
+// tag::functions_duration[]
 [source, cypher, indent=0]
 ----
 UNWIND [
@@ -52,6 +53,7 @@ duration({minutes: 1.5, seconds: 1, nanoseconds: 123456789})
 ] AS aDuration
 RETURN aDuration
 ----
+// end::functions_duration[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -75,6 +77,7 @@ RETURN aDuration
 ======
 
 .Query
+// tag::functions_duration_from_string[]
 [source, cypher, indent=0]
 ----
 UNWIND [
@@ -86,6 +89,7 @@ duration("P2012-02-02T14:37:21.545")
 ] AS aDuration
 RETURN aDuration
 ----
+// end::functions_duration_from_string[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -132,6 +136,7 @@ RETURN aDuration
 ======
 
 .Query
+// tag::functions_duration_between[]
 [source, cypher, indent=0]
 ----
 UNWIND [
@@ -145,6 +150,7 @@ duration.between(datetime({year: 2017, month: 10, day: 29, hour: 0, timezone: 'E
 ] AS aDuration
 RETURN aDuration
 ----
+// end::functions_duration_between[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -196,6 +202,7 @@ For more information, see xref:values-and-types/temporal.adoc#cypher-temporal-ac
 ======
 
 .Query
+// tag::functions_duration_in_months[]
 [source, cypher, indent=0]
 ----
 UNWIND [
@@ -208,6 +215,7 @@ duration.inDays(datetime({year: 2017, month: 10, day: 29, hour: 0, timezone: 'Eu
 ] AS aDuration
 RETURN aDuration
 ----
+// end::functions_duration_in_months[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -257,6 +265,7 @@ For more information, see xref:values-and-types/temporal.adoc#cypher-temporal-ac
 ======
 
 .Query
+// tag::functions_duration_in_days[]
 [source, cypher, indent=0]
 ----
 UNWIND [
@@ -269,6 +278,7 @@ duration.inMonths(datetime({year: 2017, month: 10, day: 29, hour: 0, timezone: '
 ] AS aDuration
 RETURN aDuration
 ----
+// end::functions_duration_in_days[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -317,6 +327,7 @@ For more information, see xref:values-and-types/temporal.adoc#cypher-temporal-ac
 ======
 
 .Query
+// tag::functions_duration_in_seconds[]
 [source, cypher, indent=0]
 ----
 UNWIND [
@@ -328,6 +339,7 @@ duration.inSeconds(datetime({year: 2017, month: 10, day: 29, hour: 0, timezone: 
 ] AS aDuration
 RETURN aDuration
 ----
+// end::functions_duration_in_seconds[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
