--- a/modules/ROOT/pages/functions/temporal/index.adoc
+++ b/modules/ROOT/pages/functions/temporal/index.adoc
@@ -401,10 +401,12 @@ The following table lists the supported truncation units and the corresponding s
 ======
 
 .Query
+// tag::functions_temporal_date[]
 [source, cypher]
 ----
 RETURN date() AS currentDate
 ----
+// end::functions_temporal_date[]
 
 The current date is returned.
 
@@ -480,6 +482,7 @@ RETURN theDate
 ======
 
 .Query
+// tag::functions_temporal_date_transaction[]
 [source, cypher]
 ----
 UNWIND [
@@ -489,6 +492,7 @@ date({year: 1984})
 ] AS theDate
 RETURN theDate
 ----
+// end::functions_temporal_date_transaction[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -565,6 +569,7 @@ The date corresponding to `11 February 1984` is returned.
 ======
 
 .Query
+// tag::functions_temporal_date_statement[]
 [source, cypher]
 ----
 UNWIND [
@@ -574,6 +579,7 @@ datetime({year: 1984, month: 11, day: 11, hour: 12, timezone: '+01:00'})
 ] AS dd
 RETURN date({date: dd}) AS dateOnly, date({date: dd, day: 28}) AS dateDay
 ----
+// end::functions_temporal_date_statement[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -643,10 +649,12 @@ This returned `DATE` will be the live clock of the system.
 ======
 
 .Query
+// tag::functions_temporal_date_realtime[]
 [source, cypher]
 ----
 RETURN date.realtime() AS currentDate
 ----
+// end::functions_temporal_date_realtime[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -1224,6 +1232,7 @@ RETURN
 The following query shows the various usages of `+datetime({datetime [, year, ..., timezone]})+`.
 
 .Query
+// tag::functions_temporal_datetime[]
 [source, cypher]
 ----
 WITH
@@ -1238,6 +1247,7 @@ RETURN
   datetime({datetime: dd, day: 28, second: 42}) AS dateTimeDDSS,
   datetime({datetime: dd, day: 28, second: 42, timezone: 'Pacific/Honolulu'}) AS dateTimeDDSSTimezone
 ----
+// end::functions_temporal_datetime[]
 
 .Result
 [role="queryresult",options="header,footer",cols="4*<m"]
@@ -1384,10 +1394,12 @@ The returned `ZONED DATETIME` will be the live clock of the system.
 ======
 
 .Query
+// tag::functions_temporal_datetime_realtime[]
 [source, cypher]
 ----
 RETURN datetime.realtime() AS currentDateTime
 ----
+// end::functions_temporal_datetime_realtime[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -1420,10 +1432,12 @@ However, a different value may be produced for different statements within the s
 ======
 
 .Query
+// tag::functions_temporal_datetime_statement[]
 [source, cypher]
 ----
 RETURN datetime.statement() AS currentDateTime
 ----
+// end::functions_temporal_datetime_statement[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -1456,10 +1470,12 @@ However, a different value may be produced for different transactions.
 ======
 
 .Query
+// tag::functions_temporal_datetime_transaction[]
 [source, cypher]
 ----
 RETURN datetime.transaction() AS currentDateTime
 ----
+// end::functions_temporal_datetime_transaction[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -1643,10 +1659,12 @@ RETURN
 ======
 
 .Query
+// tag::functions_temporal_localtime[]
 [source, cypher]
 ----
 RETURN localdatetime() AS now
 ----
+// end::functions_temporal_localtime[]
 
 The current local date and time (i.e. in the local timezone) is returned.
 
@@ -1693,6 +1711,7 @@ The current local date and time in California is returned.
 ======
 
 .Query
+// tag::functions_temporal_localtime_transaction[]
 [source, cypher]
 ----
 RETURN
@@ -1701,6 +1720,7 @@ RETURN
     hour: 12, minute: 31, second: 14, millisecond: 123, microsecond: 456, nanosecond: 789
   }) AS theDate
 ----
+// end::functions_temporal_localtime_transaction[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -1744,6 +1764,7 @@ RETURN
 ======
 
 .Query
+// tag::functions_temporal_localtime_statement[]
 [source, cypher]
 ----
 RETURN
@@ -1752,6 +1773,7 @@ RETURN
     hour: 12, minute: 31, second: 14, nanosecond: 645876123
   }) AS theDate
 ----
+// end::functions_temporal_localtime_statement[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -1828,6 +1850,7 @@ RETURN theDate
 The following query shows the various usages of `+localdatetime({date [, year, ..., nanosecond]})+`.
 
 .Query
+// tag::functions_temporal_localtime_realtime[]
 [source, cypher]
 ----
 WITH date({year: 1984, month: 10, day: 11}) AS dd
@@ -1835,6 +1858,7 @@ RETURN
   localdatetime({date: dd, hour: 10, minute: 10, second: 10}) AS dateHHMMSS,
   localdatetime({date: dd, day: 28, hour: 10, minute: 10, second: 10}) AS dateDDHHMMSS
 ----
+// end::functions_temporal_localtime_realtime[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -1957,10 +1981,12 @@ The returned `LOCAL DATETIME` will be the live clock of the system.
 ======
 
 .Query
+// tag::functions_temporal_localdatetime_realtime[]
 [source, cypher]
 ----
 RETURN localdatetime.realtime() AS now
 ----
+// end::functions_temporal_localdatetime_realtime[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -2017,10 +2043,12 @@ However, a different value may be produced for different statements within the s
 ======
 
 .Query
+// tag::functions_temporal_localdatetime_statement[]
 [source, cypher]
 ----
 RETURN localdatetime.statement() AS now
 ----
+// end::functions_temporal_localdatetime_statement[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -2053,10 +2081,13 @@ However, a different value may be produced for different transactions.
 ======
 
 .Query
+// tag::functions_temporal_localdatetime_transaction[]
 [source, cypher]
 ----
 RETURN localdatetime.transaction() AS now
 ----
+// end::functions_temporal_localdatetime_transaction[]
+
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -2221,10 +2252,12 @@ The current local time (i.e. in the local timezone) is returned.
 ======
 
 .Query
+// tag::functions_temporal_time[]
 [source, cypher]
 ----
 RETURN localtime({timezone: 'America/Los Angeles'}) AS nowInLA
 ----
+// end::functions_temporal_time[]
 
 The current local time in California is returned.
 
@@ -2306,6 +2339,7 @@ RETURN theTime
 ======
 
 .Query
+// tag::functions_temporal_time_transaction[]
 [source, cypher]
 ----
 WITH time({hour: 12, minute: 31, second: 14, microsecond: 645876, timezone: '+01:00'}) AS tt
@@ -2313,6 +2347,7 @@ RETURN
   localtime({time: tt}) AS timeOnly,
   localtime({time: tt, second: 42}) AS timeSS
 ----
+// end::functions_temporal_time_transaction[]
 
 .Result
 [role="queryresult",options="header,footer",cols="2*<m"]
@@ -2381,10 +2416,12 @@ However, a different value may be produced for different statements within the s
 ======
 
 .Query
+// tag::functions_temporal_time_statement[]
 [source, cypher]
 ----
 RETURN localtime.statement() AS now
 ----
+// end::functions_temporal_time_statement[]
 
 .Result
 [role="queryresult",options="header,footer",cols="1*<m"]
@@ -2497,6 +2534,7 @@ However, the timezone of `input` is retained.
 ======
 
 .Query
+// tag::functions_temporal_time_realtime[]
 [source, cypher]
 ----
 WITH time({hour: 12, minute: 31, second: 14, nanosecond: 645876123, timezone: '-01:00'}) AS t
@@ -2508,6 +2546,7 @@ RETURN
   localtime.truncate('millisecond', t) AS truncMillisecond,
   localtime.truncate('microsecond', t) AS truncMicrosecond
 ----
+// end::functions_temporal_time_realtime[]
 
 .Result
 [role="queryresult",options="header,footer",cols="6*<m"]
